--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,14 @@
     --animate-spotlight: spotlight 2s ease 0.75s 1 forwards;
     --font-Poppins: "Poppins", sans-serif;
     --animate-move: move 5s linear infinite;
-    --shimmer: shimmer 2s linear infinite
+    --shimmer: shimmer 2s linear infinite;
+    --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+  }
+
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
   }
 
   @keyframes move {
