--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
     --animate-move: move 5s linear infinite;
     --shimmer: shimmer 2s linear infinite;
     --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+    --shadow-input:
+    0px 2px 3px -1px rgba(0, 0, 0, 0.1),
+    0px 1px 0px 0px rgba(25, 28, 33, 0.02),
+    0px 0px 0px 1px rgba(25, 28, 33, 0.08);
   }
 
   @keyframes scroll {
